<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/random"
        android:icon="@drawable/ic_random"
        android:showAsAction="ifRoom|withText"
        android:title="@string/random"/>
    <item
        android:id="@+id/jumpto"
        android:icon="@drawable/ic_jump_to"
        android:showAsAction="ifRoom|withText"
        android:title="@string/jump_to"/>
    <item
        android:id="@+id/openInBrowser"
        android:icon="@drawable/ic_browser"
        android:showAsAction="ifRoom|withText"
        android:title="@string/openInBrowser"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:showAsAction="ifRoom|withText"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/explain"
        android:icon="@drawable/ic_explain"
        android:showAsAction="ifRoom|withText"
        android:title="@string/explain"/>

</menu>